[package]
name = "todoist_rest"
version = "0.0.3-dev"
authors = ["Dewey Vozel <dewey@vozel.net>"]
license = "MIT"
description = "A library wrapping the Todoist REST API."
documentation = "https://github.com/vozeldr/todoist_rest"
homepage = "https://github.com/vozeldr/todoist_rest"
repository = "https://github.com/vozeldr/todoist_rest.git"
readme = "README.md"
keywords = ["Todo", "Task", "Project", "Todoist", "REST"]
categories = ["data-structures", "web-programming::http-client"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0.8.2"
serde = "1.0.25"
serde_json = "1.0.8"
serde_derive = "1.0.25"
uuid = "0.5.1"